[bug 819167] Reduce forum whitespace

--- a/media/less/questions.less
+++ b/media/less/questions.less
@@ -208,10 +208,18 @@ h2 {
 
   .sidebar-nav {
     margin-bottom: 20px;
+
+    &.condensed {
+      margin-bottom: 0;
+    }
   }
 
   .sidebox {
     margin-bottom: 20px;
+
+    &.condensed {
+      margin-bottom: 0;
+    }
   }
 
   #question-reply {
